# rf-exposure-plusplus

./: .gitignore  CMakeLists.txt  CableLossConstants.cpp  CableLossConstants.h  ExposureCalculator.cpp  ExposureCalculator.h  README.md  rf-exposure-plusplus.cpp  rf-exposure-plusplus.h
rf-exposure-plus-plus/: CMakeLists.txt  CableLossConstants.cpp  CableLossConstants.h  ExposureCalculator.cpp  ExposureCalculator.h  FrequencyValues.cpp  FrequencyValues.h  rf-exposure-plus-plus.cpp  rf-exposure-plus-plus.h
rf-exposure-plusplus/: CMakeLists.txt  CableValues.cpp  CableValues.h  ExposureCalculator.cpp  ExposureCalculator.h  FrequencyValues.cpp  FrequencyValues.h  rf-exposure-plusplus.cpp
